# riscx32_and_rust

./: README.md
program_gw2arlv18qn88c817/project/: project.gprj
program_gw2arlv18qn88c817/project/impl/: project_process_config.json
program_gw2arlv18qn88c817/project/impl/gwsynthesis/: project.prj  project.vg  project_syn.rpt.html  project_syn_resource.html  project_syn_rsc.xml
program_gw2arlv18qn88c817/project/impl/gwsynthesis/RTL_GAO/: gw_gao_top.v
program_gw2arlv18qn88c817/project/impl/gwsynthesis/RTL_GAO/ao_0/: gw_ao_init.v  gw_ao_parameter.v
program_gw2arlv18qn88c817/project/impl/pnr/: ao_0.binx  cmd.do  project.binx  project.db  project.pin.html  project.power.html  project.rpt.html  project.rpt.txt  project.timing_paths  project_tr_cata.html  project_tr_content.html
program_gw2arlv18qn88c817/project/impl/temp/: rtl_parser.result  rtl_parser_arg.json
program_gw2arlv18qn88c817/project/src/: main.sv  main.v  project  project.cst  project.hex  project.rao  project.sdc  riscx32.sv  riscx32.v
program_riscx32ec/project/: Cargo.toml  build.rs
program_riscx32ec/project/.cargo/: config.toml
program_riscx32ec/project/src/: main.rs
program_riscx32ec/riscx32/: Cargo.toml  build.rs  link.ld
program_riscx32ec/riscx32/riscx32macro/: Cargo.toml
program_riscx32ec/riscx32/riscx32macro/src/: lib.rs
program_riscx32ec/riscx32/src/: lib.rs
